<resources>
    <!-- Main View -->
    <string name="app_name">MicroCosmos</string>
    <string name="activity_main__exit">Quitter ?</string>

    <!-- Splashscreen View-->
    <string name="activity_splashscreen__title">MICROCOSMOS</string>

    <!-- Login View-->
    <string name="activity_login__login_wording">Identifiant</string>
    <string name="activity_login__password_wording">Mot de passe</string>
    <string name="activity_login__validate_wording">Connexion</string>
    <string name="activity_login__sign_up_wording">S\'inscrire</string>
    <string name="activity_login__connection_refused">Connexion refusée</string>
    <string name="activity_login__login_success">Connecté</string>

    <!-- Create View -->
    <string name="activity_create_job__create_job_success">Le job a été créé avec succès</string>
    <string name="activity_create_job__create_job_error">Impossible de créer le job pour le moment</string>
    <string name="activity_create_job__create_job_login_required">Connexion requise</string>

    <!-- SignUp View -->
    <string name="activity_sign_up__validate">Valider</string>
    <string name="activity_sign_up__firstname">Prénom</string>
    <string name="activity_sign_up__lastname">Nom</string>
    <string name="activity_sign_up__phone">Téléphone</string>
    <string name="activity_sign_up__mail">E-mail</string>
    <string name="activity_sign_up__password">Mot de passe</string>
    <string name="activity_sign_up__sign_up_success">Inscription réussie</string>
    <string name="activity_sign_up__sign_up_error">Inscription impossible pour le moment</string>

    <!-- Profile View -->
    <string name="activity_profile__logout">Déconnexion</string>
    <string name="activity_profile__logout_success">Déconnecté</string>

    <!-- Detail View -->
    <string name="activity_detail__job_title">Titre</string>
    <string name="activity_detail__job_owner">Auteur</string>
    <string name="activity_detail__job_date">Date</string>
    <string name="activity_detail__job_make_offer">Faire une offre</string>
    <string name="activity_detail__job_show_change_offer">Modifier l\'offre</string>
    <string name="activity_detail__job_show_list_offer">Voir les offres</string>

    <!-- BOTTOM NAVIGATION VIEW -->
    <string name="bottom_navigation_new">Nouveau</string>
    <string name="bottom_navigation_notification">Notifications</string>
    <string name="bottom_navigation_chat">Messages</string>
    <string name="bottom_navigation_board">Tableau</string>
    <string name="bottom_navigation_profile">Profil</string>

    <!-- CreateOffer View-->
    <string name="activity_create_offer__offer_wording">Quel prix proposes-tu pour faire ce job ?</string>
    <string name="activity_create_offer__offer_success">L\'offre a été envoyé avec succés</string>

    <!-- ChangeOffer View-->
    <string name="activity_create_offer__change_wording">Le prix que tu proposes pour faire ce job est :</string>

    <!-- ListOffer View-->
    <string name="activity_create_offer__list_wording">Des propositions ont été faites pour ce job :</string>
    <string name="activity_create_offer__empty_list_wording">Aucune proposition n\'a encore été faite pour ce job.</string>

</resources>
